--- a/package.json
+++ b/package.json
@@ -1,32 +1,48 @@
 {
-    "name": "js-coding-challenge",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-      "lint": "./node_modules/.bin/eslint **/*.js --quiet --fix",
-      "lint-win": "node node_modules\\eslint\\bin\\eslint **/*.js --quiet --fix",
-      "test": "jest",
-      "test-watch": "jest --watchAll"
-    },
-    "jest": {
-      "testRegex": "../.*.js$"
-    },
-    "repository": {
-      "type": "git",
-      "url": "git+https://github.com/Tsionad/js-coding-challenge.git"
-    },
-    "author": "Tsion Adefres",
-    "license": "ISC",
-    "bugs": {
-      "url": "https://github.com/Tsionad/js-coding-challenge/issues"
-    },
-    "homepage": "https://github.com/Tsionad/js-coding-challenge#readme",
-    "dependencies": {
-      "eslint": "^5.16.0",
-      "eslint-config-airbnb-base": "^13.2.0",
-      "eslint-plugin-import": "^2.19.1",
-      "jest": "^23.6.0"
-    }
+  "name": "js-coding-challenge",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "lint": "./node_modules/.bin/eslint **/*.js --quiet --fix",
+    "lint-win": "node node_modules\\eslint\\bin\\eslint **/*.js --quiet --fix",
+    "test": "jest",
+    "test-coverage": "jest --coverage",
+    "test-watch": "jest --watchAll"
+  },
+  "jest": {
+    "testRegex": "../.*.js$",
+    "coverageReporters": [
+      "text-summary",
+      "html"
+    ],
+    "reporters": [
+      "default",
+      [
+        "./node_modules/jest-html-reporter",
+        {
+          "pageTitle": "Test Report"
+        }
+      ]
+    ]
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Tsionad/js-coding-challenge.git"
+  },
+  "author": "Tsion Adefres",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Tsionad/js-coding-challenge/issues"
+  },
+  "homepage": "https://github.com/Tsionad/js-coding-challenge#readme",
+  "dependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.2.0",
+    "eslint-plugin-import": "^2.19.1",
+    "jest-html-reporter": "^3.3.0"
+  },
+  "devDependencies": {
+    "jest": "^23.6.0"
   }
-  
+}
